<resources>
    <string name="app_name">RadarBike</string>
    <string name="settings_stop">Parar execução</string>
    <string name="settings_sair">Sair</string>
    <string name="mode_driver">Mode: Driver</string>
    <string name="mode_cyclist">Mode: Cyclist</string>
    <string name="driver_advise">Atenção, ciclista nas proximidades.</string>
    <string name="driver_mode">Driver Mode</string>
    <string name="motorcycle">Moto</string>
    <string name="car">Carro</string>
    <string name="taxi">Táxi</string>
    <string name="bus">Ônibus</string>
    <string name="truck">Caminhão</string>
    <string name="close">Cancelar</string>
    <string name="ok">OK</string>
    <string name="info_message">A aplicação ficará em execução em plano de fundo no modo selecionado.</string>
    <string name="stop_confirm_message">O RadarBike finalizará a sua execução. Deseja confirmar?</string>
</resources>
